# LoveACE

./: .gitignore  LICENSE  NOTICE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  general_issue.yml  internal_task.yml
.github/workflows/: build-apk.yml  build-desktop-macos.yml  build-desktop-windows.yml  check-macos-notarization.yml  deploy-analytics-worker.yml  deploy-analytics.yml  diagnose-analytics.yml  ios-testflight.yml  network-guard-ci.yml  sync-semesters.yml  update-analytics-stats.yml
analytics-server/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
analytics-server/app/: main.py
analytics-server/app/core/: config.py  security.py
analytics-server/app/db/: models.py  session.py
analytics-server/app/routers/: events.py  health.py
analytics-server/app/schemas/: events.py
analytics-worker/: README.md  package-lock.json  package.json  wrangler.toml
analytics-worker/migrations/: 0001_init.sql  0002_smart_select.sql  0003_drop_smart_select.sql
analytics-worker/public/: bi.html  smart-select.html
analytics-worker/scripts/: generate-stats-card.mjs
analytics-worker/src/: index.ts
android/: .gitignore  AGENTS.md  settings.gradle.kts
android/app/: build.gradle.kts
android/downloads/: ios.html
android/gradle/: libs.versions.toml
desktop/: pubspec.yaml
desktop/lib/: main.dart
desktop/windows/: CMakeLists.txt
ios/: .gitignore  AGENTS.md  AnalyticsSecrets.example.swift  ExportOptions.plist  Info.plist  autojudge.md
ios/Shared/: WidgetModels.swift
(+205 files in other folders)
