[project]
name = "loveace-analytics-server"
version = "0.1.0"
description = "LoveACE telemetry ingestion service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.7",
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"
